# memro-core

./: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  start.sh
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 0001_initial_identities.sql  0002_create_memories.sql  20260131210000_add_multimodal.sql  20260224000000_add_indexes.sql
backend/src/: lib.rs  main.rs
backend/src/adapters/: embeddings.rs  mod.rs  qdrant_adapter.rs  stub_vector.rs
backend/src/adapters/api/: mod.rs  search.rs  upload.rs
backend/src/adapters/crypto/: mod.rs
backend/src/adapters/postgres/: mod.rs
backend/src/domain/: memory.rs  mod.rs
backend/src/ports/: mod.rs
backend/src/services/: embedding_pipeline.rs  extractor.rs  mod.rs  openai.rs  storage.rs
docs/deploy/: aws.md  digitalocean.md  gcp.md
frontend/: landing.html  package-lock.json  package.json
frontend-developer/: Dockerfile  index.html  package.json
frontend-developer/src/: App.jsx  index.css
